# codegen

./: README.md  pyproject.toml
backend/codegen/: settings.py
backend/codegen/lib/: generate.py
backend/codegen/lib/openai/: client.py
backend/codegen/templates/: code.tmpl
cli/codegen_cli/: cli.py
